fix fail get
