# docs/swagger.json
@@ -1,147 +1,238 @@
 {
-  "swagger": "2.0",
-  "info": {
-    "description": "William Project API Documentation",
-    "title": "William Project API",
-    "contact": {},
-    "version": "1.0"
-  },
-  "host": "localhost:3000",
-  "basePath": "/api/v1",
-  "paths": {
-    "/images": {
-      "get": {
-        "description": "Mengambil semua gambar yang ada di folder images",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "tags": ["Images"],
-        "summary": "Lihat daftar gambar",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
-          }
-        }
-      }
+    "schemes": [
+        "http"
+    ],
+    "swagger": "2.0",
+    "info": {
+        "description": "William Project API Documentation",
+        "title": "William Project API",
+        "contact": {},
+        "version": "1.0"
     },
-    "/images/{name}": {
-      "get": {
-        "description": "Mengambil satu gambar berdasarkan nama",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "tags": ["Images"],
-        "summary": "Lihat satu gambar",
-        "parameters": [
-          {
-            "type": "string",
-            "description": "Nama Gambar",
-            "name": "name",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "file"
+    "host": "localhost:3001",
+    "basePath": "/api/v1",
+    "paths": {
+        "/images": {
+            "get": {
+                "description": "Mengambil semua gambar dari folder `images`",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Images"
+                ],
+                "summary": "Lihat daftar gambar",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
             }
-          }
-        }
-      },
-      "delete": {
-        "description": "Menghapus gambar berdasarkan nama",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "tags": ["Images"],
-        "summary": "Hapus gambar",
-        "parameters": [
-          {
-            "type": "string",
-            "description": "Nama Gambar",
-            "name": "name",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "object",
-              "additionalProperties": {
-                "type": "string"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/upload": {
-      "post": {
-        "description": "Mengupload gambar ke folder images",
-        "consumes": ["multipart/form-data"],
-        "produces": ["application/json"],
-        "tags": ["Images"],
-        "summary": "Upload gambar",
-        "parameters": [
-          {
-            "type": "file",
-            "description": "File Gambar",
-            "name": "file",
-            "in": "formData",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "object",
-              "additionalProperties": {
-                "type": "string"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/uploads": {
-      "post": {
-        "description": "Mengupload banyak gambar ke folder images",
-        "consumes": ["multipart/form-data"],
-        "produces": ["application/json"],
-        "tags": ["Images"],
-        "summary": "Upload gambar",
-        "parameters": [
-          {
-            "type": "array",
-            "items": {
-              "type": "file"
+        },
+        "/images/{name}": {
+            "get": {
+                "description": "Mengambil gambar berdasarkan nama",
+                "produces": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "Images"
+                ],
+                "summary": "Lihat satu gambar",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Nama Gambar",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
             },
-            "description": "File Gambar",
-            "name": "files",
-            "in": "formData",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "object",
-              "additionalProperties": {
-                "type": "string"
-              }
+            "delete": {
+                "description": "Menghapus gambar berdasarkan nama",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Images"
+                ],
+                "summary": "Hapus gambar",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Nama Gambar",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
             }
-          }
+        },
+        "/upload": {
+            "post": {
+                "description": "Mengunggah satu file gambar ke folder `images`",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Images"
+                ],
+                "summary": "Upload gambar",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "File Gambar",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/uploads": {
+            "post": {
+                "description": "Mengunggah banyak gambar sekaligus ke folder `images`",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Images"
+                ],
+                "summary": "Upload banyak gambar",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Daftar File Gambar",
+                        "name": "files",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
         }
-      }
     }
-  }
 }
